testData/commands/errors/parent/test_usableAsAppCommand.ts
import { defineCommand } from "../../../../definitions";

export default defineCommand({
    key: "test_usableAsAppCommand",
    usableAsAppCommand: true
});
